--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
   
       <div class="product-card" >
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="./PRODUCT PAGE/Index.html">
         <img src="images/Product2.jpg" alt="Black Tar Sneakers">
         <div class="product-info">
           <h3>JACKETZ BONES</h3>
