--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="carousel-track" id="carouselTrack">
       
       <div class="product-card">
-        <a href="/blackineverything/PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
          
         <img src="images/Product1.jpg" alt="Pure Love Sneakers">
         <div class="product-info">
