--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
   
       <div class="product-card" >
-        <a href="./PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/Product2.jpg" alt="Black Tar Sneakers">
         <div class="product-info">
           <h3>JACKETZ BONES</h3>
@@ -63,7 +63,7 @@
       </div>
   
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/Product3.jpg" alt="Veuve Noire Sneakers">
         <div class="product-info">
           <h3>GREY TEE</h3>
@@ -74,7 +74,7 @@
       </div>
   
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/product4.jpg" alt="Black Red Motor Sneakers">
         <div class="product-info">
           <h3>JACKETZ A$AP</h3>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/Product5.jpg" alt="Black Red Motor Sneakers">
         <div class="product-info">
           <h3>JACKETZ BL4CK</h3>
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/product6.jpg" alt="Black Red Motor Sneakers">
         <div class="product-info">
           <h3>JACKETZ BLANK</h3>
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/product7.jpg" alt="Black Red Motor Sneakers">
         <div class="product-info">
           <h3>BIE X SANTOSHI</h3>
@@ -114,7 +114,7 @@
         </div>
       </div> 
       <div class="product-card">
-        <a href="../PRODUCT PAGE/Index.html">
+        <a href="PRODUCT PAGE/Index.html">
         <img src="images/Product8.jpg" alt="Black Red Motor Sneakers">
         <div class="product-info">
           <h3>BL4CK TEE</h3>
