--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
     </div>
   </section>
-  <script src="blackineverything/Script.js" defer></script>
+  <script src="Script.js" defer></script>
   
   <section class="reference-section">
     <h2>ART WE MADE</h2>
