--- a/PRODUCT PAGE/Index.html
+++ b/PRODUCT PAGE/Index.html
@@ -17,7 +17,7 @@
       </div>
       <header>
         <br> <br>
-        <a href="../PAGE/index.html" class="logo">B I E</a>
+        <a href="../blackineverything/index.html" class="logo">B I E</a>
 
       </header>
     <main class="product-page">
