--- a/PRODUCT PAGE/Index.html
+++ b/PRODUCT PAGE/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Producto | BLACK IN EVERYTHING</title>
   <link rel="stylesheet" href="../PRODUCT PAGE/CSS/Style.css" />
-  <link rel="icon" href="../PAGE/images/qawe.jpg" type="image/png">
+  <link rel="icon" href="../blackineverything/images/qawe.jpg" type="image/png">
 <link rel="stylesheet" href="../PRODUCT PAGE/script.js">
 </head>
 <body>
