--- a/PRODUCT PAGE/Index.html
+++ b/PRODUCT PAGE/Index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Producto | BLACK IN EVERYTHING</title>
   <link rel="stylesheet" href="../PRODUCT PAGE/CSS/Style.css" />
-  <link rel="icon" href="../blackineverything/images/qawe.jpg" type="image/png">
+  <link rel="icon" href="../images/qawe.jpg" type="image/png">
 <link rel="stylesheet" href="../PRODUCT PAGE/script.js">
 </head>
 <body>
@@ -17,7 +17,7 @@
       </div>
       <header>
         <br> <br>
-        <a href="../blackineverything/index.html" class="logo">B I E</a>
+        <a href="../index.html" class="logo">B I E</a>
 
       </header>
     <main class="product-page">
