--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       </div>
   </section>
   <section class="product-carousel">
+     <button class="carousel-arrow arrow-left">‹</button>
+<button class="carousel-arrow arrow-right">›</button>
     <h2></h2>
     <div class="carousel-product" id="carouselTrack">
       
