--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 
   <header id="navbar">
-    <div class="logo">B I E</div>
+    <div id="home" class="logo">B I E</div>
     <nav>
-      <a href="#">HOME</a>
-      <a href="#">SHOP</a>
-      <a href="#">FAQ</a>
+      <a href="#home">HOME</a>
+      <a href="#shop">SHOP</a>
+      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -35,7 +35,7 @@
         </div>
       </div>
   </section>
-  <section class="product-carousel">
+  <section id="shop" class="product-carousel">
      <button class="carousel-arrow arrow-left">‹</button>
 <button class="carousel-arrow arrow-right">›</button>
     <h2></h2>
@@ -134,7 +134,7 @@
       Tu navegador no soporta el video HTML5.
     </video>
   </section>
-  <section class="faq-section">
+  <section id="faq" class="faq-section">
     <h2>FAQ </h2>
   
     <div class="faq-item">
