--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <header id="navbar">
-    <div id="home" class="logo">B I E</div>
+  <header id="home" id="navbar">
+    <div  class="logo">B I E</div>
     <nav>
       <a href="#home">HOME</a>
       <a href="#shop">SHOP</a>
