--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header id="home" id="navbar">
+  <header id="navbar">
     <div  class="logo">B I E</div>
     <nav>
       <a href="#home">HOME</a>
