--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section id class="hero">
     <div class="hero-content">
       <h1>
-        <span>BLACK</span>
+        <span id="home" >BLACK</span>
         <span class="italic">IN</span>
         <span class="bold">EVERYTHING</span>
       </h1>
