--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </header>
 
   <section id class="hero">
-    <div class="hero-content">
+    <div id="home" class="hero-content">
       <h1>
-        <span id="home" >BLACK</span>
+        <span>BLACK</span>
         <span class="italic">IN</span>
         <span class="bold">EVERYTHING</span>
       </h1>
